statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ipfs-cluster
spec:
  serviceName: ipfs-cluster
  replicas: 2
  selector:
    matchLabels:
      app: ipfs-cluster
  template:
    metadata:
      labels:
        app: ipfs-cluster
    spec:
      containers:
        - name: ipfs
          image: "ipfs/go-ipfs:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: swarm
              containerPort: 4001
            - name: swarm-udp
              protocol: UDP
              containerPort: 4002
            - name: api
              containerPort: 5001
            - name: ws
              containerPort: 8081
            - name: http
              containerPort: 8080
          livenessProbe:
            tcpSocket:
              port: swarm
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 15
          readinessProbe:
            tcpSocket:
              port: 5001
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
          volumeMounts:
            - name: ipfs-storage
              mountPath: /data/ipfs
            - name: config-scripts
              mountPath: /config-scripts
          resources:
            {}
        - name: ipfs-cluster
          image: "ipfs/ipfs-cluster:latest"
          imagePullPolicy: IfNotPresent
          command: ["sh", "/config-scripts/entrypoint.sh"]
          ports:
            - name: api-http
              containerPort: 9094
            - name: proxy-http
              containerPort: 9095
            - name: cluster-swarm
              containerPort: 9096
          livenessProbe:
            tcpSocket:
              port: cluster-swarm
            initialDelaySeconds: 5
            timeoutSeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /id
              port: api-http
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
          volumeMounts:
            - name: cluster-storage
              mountPath: /data/ipfs-cluster
            - name: config-scripts
              mountPath: /config-scripts
          resources:
            {}

      volumes:
        - name: config-scripts
          configMap:
            name: bootstrap-conf

  volumeClaimTemplates:
    - metadata:
        name: cluster-storage
      spec:
        storageClassName: standard
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
    - metadata:
        name: ipfs-storage
      spec:
        storageClassName: standard
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
