cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipfs-cluster
  labels:
    app: ipfs-cluster
spec:
  type: NodePort
  selector:
    app: ipfs-cluster
  ports:
    - name: swarm
      targetPort: swarm
      port: 4001
    - name: swarm-udp
      targetPort: swarm-udp
      port: 4002
    - name: api
      targetPort: api
      port: 5001
    - name: ws
      targetPort: ws
      port: 8081
    - name: http
      targetPort: http
      port: 8080
    - name: api-http
      targetPort: api-http
      port: 9094
    - name: proxy-http
      targetPort: proxy-http
      port: 9095
    - name: cluster-swarm
      targetPort: cluster-swarm
      port: 9096
