service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipfs-cluster
  labels:
    app: ipfs-cluster
spec:
  type: LoadBalancer
  selector:
    app: ipfs-cluster
  ports:
    - name: swarm
      port: 4001
    - name: http
      port: 8080
    - name: proxy-http
      port: 9095
    - name: cluster-swarm
      port: 9096
