cluster-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ipfs-cluster-loadbalancer
  labels:
    app: ipfs-cluster
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "ipfs-api-ip"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "16"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
spec:
  rules:
    - host: ipfs.lukso.network
      http: &http_rules
        paths:
          - path: /
            backend:
              serviceName: ipfs-cluster
              servicePort: 9095  # ipfs-proxy
          - path: /add
            backend: &cluster_api_service
              serviceName: ipfs-cluster
              servicePort: 9094 # ipfs-cluster restapi
          - path: /id
            backend: *cluster_api_service
          - path: /version
            backend: *cluster_api_service
          - path: /pins
            backend: *cluster_api_service
          - path: /api/v0/id
            backend: &open_api_service
              serviceName: "ipfs-cluster"
              servicePort: 5001
          - path: /api/v0/dns
            backend: *open_api_service
          - path: /api/v0/get
            backend: *open_api_service
          - path: /api/v0/add
            backend: &api_service
              serviceName: ipfs-cluster
              servicePort: 9095
          - path: /api/v0/object/links
            backend: *api_service
          - path: /api/v0/object/patch/add-link
            backend: *api_service
          - path: /api/v0/object/patch/rm-link
            backend: *api_service
          - path: /ipfs
            backend:
              serviceName: ipfs-cluster
              servicePort: 8080
          - path: /ipns
            backend:
              serviceName: ipfs-cluster
              servicePort: 8080
